--- a/APIREST/.htaccess
+++ b/APIREST/.htaccess
@@ -2,3 +2,4 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . Estacionamiento.php [L]
+Options -Indexes
